7-5 時間の表示

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 iced = "0.3.0"
 iced_futures = "0.3.0"
 async-std = { version = "1.10.0", features = ["unstable"]}
+iced_native = "*"
